# cs-481-ai-project

./: .gitignore  .pre-commit-config.yaml  README.md  checkers_game.py  pyproject.toml  ruff.toml
.github/workflows/: pre-commit.yml
ai_project/: board.py  checkers_game.py  engine.py  lib_game.py  utils.py
ai_project/checkers/: board.py  engine.py  main.py
ai_project/tic_tac_toe/: board.py  engine.py  main.py
