[project]
name = "dualboard-negamax-ai"
version = "0.1.0"
description = "This is the final project I made with my friend Demetri for my CS-481 AI class at Kettering University in Spring 2025. It implements a Negamax AI agent for Draughts and Tic-Tac-Toe, with a focus on performance and correctness."
authors = [
    { name = "Trevor Arcieri", email = "agent.steel.ta@gmail.com" },
    { name = "Demetri Karras", email = "demetri894@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = ["py-draughts (>=1.3.1,<2.0.0)"]

[tool.poetry]
packages = [{ include = "ai_project" }]

[project.scripts]
checkers = "ai_project.checkers.main:main"
tic-tac-toe = "ai_project.tic_tac_toe.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.11"
pyright = "^1.1.401"
pre-commit = "^4.2.0"
pytest = "^8.3.5"
pytest-xdist = "^3.7.0"
pytest-asyncio = "^1.0.0"
